# migration_tools

./: .env.example  .gitignore  README.md  cron-install.sh  cron-sync.sh  pyproject.toml  setup.sh  sync.sh  개발스택.txt
service-template/: README.md  start.sh  status.sh  stop.sh
src/flopi_db_sync/: __init__.py  __main__.py  cli.py  config.py  state.py  sync.py
